# jmc

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
sources/: CMakeLists.txt  changelog.md  changelog.txt
sources/platform/windows/: CMakeLists.txt
sources/platform/windows/ttcoreex/: Tintin.h  ttobjects.h
sources/recore/: CMakeLists.txt
sources/tools/regex_demo/: CMakeLists.txt  main.c
